--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   web:
     image: movies
@@ -14,6 +12,8 @@ services:
       - .:/var/www/html
     depends_on:
       - db
+    restart: always
+    command: npm start
   
   db:
     platform: "linux/amd64"
@@ -21,10 +21,10 @@ services:
     env_file:
       - .env
     environment:
-      MYSQL_ROOT_PASSWORD:
+      MYSQL_ALLOW_EMPTY_PASSWORD: 1
       MYSQL_DATABASE: ${DB_DATABASE}
-      MYSQL_USER: ${DB_USERNAME}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD} 
     ports:
       - "3306:3306"
     volumes:
